# NLLD

./: .gitignore  README.md  pyproject.toml
notebooks/: example_detector_statistics.ipynb
src/NLLD.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/nlld/: ags_iss.py  compare_mkfs_undershoots.py  createvisibilities.py  gui_nicervisibility.py  make_observing_catalog.py  mkfdiagnostics.py  nicermkf.py  observing_geometry.py  orbitinfo_targetcat.py  plot_targets.py  sunbodyaz_mkfnicer.py  targetvisibilitydetails.py
